updated author details in package.json file

--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
 		"ecommerce"
 	],
 	"license": "MIT",
-	"author": "",
+	"author": "Suryajith M S",
 	"repository": {
 		"type": "git",
 		"url": "https://github.com/Suryajith32/Product-Configuration-Engine"
