--- a/.github/workflows/deploy-playground.yml
+++ b/.github/workflows/deploy-playground.yml
@@ -2,7 +2,7 @@ name: Deploy Playground
 
 on:
   push:
-    branches: [ "main", "master" ]
+    branches: [ "main", "master", "feature/playground-demo" ]
   workflow_dispatch:
 
 permissions:
