Fixed the Build Error: Added .nojekyll and stabilized TypeScript/dependency versions. Restored Files: All missing source and configuration files have been recovered. Verified Build: npm run build now completes successfully.

--- a/playground/tsconfig.app.json
+++ b/playground/tsconfig.app.json
@@ -1,6 +1,5 @@
 {
   "compilerOptions": {
-    "tsBuildInfoFile": "./node_modules/.tmp/tsconfig.app.tsbuildinfo",
     "target": "ES2022",
     "useDefineForClassFields": true,
     "lib": [
@@ -24,9 +23,7 @@
     "strict": true,
     "noUnusedLocals": true,
     "noUnusedParameters": true,
-    "erasableSyntaxOnly": true,
     "noFallthroughCasesInSwitch": true,
-    "noUncheckedSideEffectImports": true,
     "paths": {
       "product-variants-core": [
         "../src/index.ts"
@@ -34,6 +31,7 @@
     }
   },
   "include": [
-    "src"
+    "src",
+    "../src"
   ]
 }
