--- a/package.json
+++ b/package.json
@@ -37,9 +37,11 @@
 	"scripts": {
 		"build": "tsc -p tsconfig.json",
 		"clean": "node -e \"require('fs').rmSync('dist',{recursive:true,force:true})\"",
+		"test": "vitest",
 		"prepublishOnly": "npm run clean && npm run build"
 	},
 	"devDependencies": {
-		"typescript": "^5.6.2"
+		"typescript": "^5.6.2",
+		"vitest": "^4.0.16"
 	}
 }
